[gd_scene load_steps=8 format=3 uid="uid://dlqdwk8pp24i7"]

[ext_resource type="Script" path="res://entities/sheep/screaming_sheep.gd" id="1_msb6r"]
[ext_resource type="Script" path="res://entities/sheep/sheep_color.gd" id="3_fitst"]
[ext_resource type="PackedScene" uid="uid://croqabxpl1bsp" path="res://entities/models/sheep_anim.tscn" id="4_hxr2l"]
[ext_resource type="PackedScene" uid="uid://8moakbfkwvx3" path="res://particles/sound_wave.tscn" id="4_iy2rh"]
[ext_resource type="PackedScene" uid="uid://cf1xgv7607aam" path="res://particles/dust.tscn" id="5_c62bw"]

[sub_resource type="SphereShape3D" id="SphereShape3D_5w0s4"]
radius = 1.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_fu2pm"]
points = PackedVector3Array(0, 0, 5, 0, 10, 5, 0, 10, -5, 0, 0, -5, 30, 0, 20, 30, 20, 20, 30, 20, -20, 30, 0, -20)

[node name="Sheep" type="CharacterBody3D" groups=["pickable", "sheep"]]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0)
script = ExtResource("1_msb6r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_5w0s4")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.1
avoidance_enabled = true
height = 5.0
radius = 2.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="SheepModel" parent="." instance=ExtResource("4_hxr2l")]
unique_name_in_owner = true
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="SheepColor" type="Node3D" parent="."]
script = ExtResource("3_fitst")
color = "красный"

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_5w0s4")

[node name="ScreamRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScreamRange"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_fu2pm")

[node name="RotationTimer" type="Timer" parent="."]

[node name="SoundWave" parent="." instance=ExtResource("4_iy2rh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.85, 1.35, 0)

[node name="Dust" parent="." instance=ExtResource("5_c62bw")]

[node name="BeeTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
attenuation_model = 2
bus = &"SFX"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="area_entered" from="ScreamRange" to="." method="_on_scream_range_area_entered"]
[connection signal="body_entered" from="ScreamRange" to="." method="_on_scream_range_body_entered"]
[connection signal="body_exited" from="ScreamRange" to="." method="_on_scream_range_body_exited"]
[connection signal="timeout" from="RotationTimer" to="." method="_on_rotation_timer_timeout"]
[connection signal="timeout" from="BeeTimer" to="." method="_on_bee_timer_timeout"]
